--- a/docker/squid_config.json
+++ b/docker/squid_config.json
@@ -1,8 +1,8 @@
 {
-    "robot_name": "iiwa_one",
+    "robot_name": "squid",
     "gripper_address": "192.168.1.20",
     "gripper_remote_port": "1500",
     "gripper_local_port": "1501",
     "iiwa_port": "30200",
-    "container": "iiwa_one"
+    "container": "iiwa_squid"
 }
