--- a/docker/octopus_config.json
+++ b/docker/octopus_config.json
@@ -4,5 +4,7 @@
     "gripper_remote_port": "1700",
     "gripper_local_port": "1701",
     "iiwa_port": "30201",
-    "container": "iiwa_octopus"
+    "container": "iiwa_octopus",
+    "log_directory": "/home/robot-lab/logs/octopus",
+    "procman_config": "lcm_pick_and_place.pmd"
 }
