--- a/docker/squid_config.json
+++ b/docker/squid_config.json
@@ -4,5 +4,7 @@
     "gripper_remote_port": "1500",
     "gripper_local_port": "1501",
     "iiwa_port": "30200",
-    "container": "iiwa_squid"
+    "container": "iiwa_squid",
+    "log_directory": "/home/robot-lab/logs/squid",
+    "procman_config": "lcm_pick_and_place.pmd"
 }
