Update to cephalopod-2017-11-08

--- a/docker/octopus_config.json
+++ b/docker/octopus_config.json
@@ -7,6 +7,5 @@
     "container": "iiwa_octopus",
     "log_directory": "/home/robot-lab/logs/octopus",
     "procman_config": "lcm_pick_and_place.pmd",
-    "iiwa_index": "1",
-    "target_index": "1"
+    "task_index": "1"
 }
