--- a/docker/squid_config.json
+++ b/docker/squid_config.json
@@ -5,7 +5,7 @@
     "gripper_local_port": "1701",
     "iiwa_port": "30200",
     "container": "iiwa_squid",
-    "log_directory": "/home/robot-lab/logs/squid",
+    "log_directory": "/media/logs/squid",
     "procman_config": "lcm_pick_and_place.pmd",
     "task_index": "0"
 }
