--- a/docker/octopus_config.json
+++ b/docker/octopus_config.json
@@ -7,5 +7,6 @@
     "container": "iiwa_octopus",
     "log_directory": "/media/logs/octopus",
     "procman_config": "lcm_pick_and_place.pmd",
-    "task_index": "1"
+    "task_index": "1",
+    "camera_device": "/dev/video0"
 }
