--- a/docker/squid_config.json
+++ b/docker/squid_config.json
@@ -7,5 +7,6 @@
     "container": "iiwa_squid",
     "log_directory": "/media/logs/squid",
     "procman_config": "lcm_pick_and_place.pmd",
-    "task_index": "0"
+    "task_index": "0",
+    "camera_device": "/dev/video0"
 }
