Make optitrack ids specified in the robot config
Run the kuka_driver out of a bazel build instead of cmake

Add a config for cuttlefish

--- a/docker/squid_config.json
+++ b/docker/squid_config.json
@@ -7,6 +7,7 @@
     "container": "iiwa_squid",
     "log_directory": "/media/logs/squid",
     "procman_config": "lcm_pick_and_place.pmd",
-    "task_index": "0",
-    "camera_device": "/dev/video0"
+    "iiwa_optitrack_id": "1",
+    "target_optitrack_id": "7",
+    "camera_device": "no_camera_configured"
 }
