--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -20,28 +20,20 @@ WORKDIR /home/$USER_NAME
 RUN echo $USER_PASSWORD | sudo -S bash -c 'echo "'$USER_NAME' ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/docker-user' && printf "\n"
 
 # Install some packages which are convenient for interactive shells
-RUN apt install iptables less vim ccache iproute2 tcpdump
-
-# Make recording video possible
-RUN apt install ffmpeg
+RUN apt update
+RUN apt install -y iptables less vim ccache iproute2 tcpdump git
 
 COPY spartan /home/$USER_NAME/spartan
 COPY iiwa-tools /home/$USER_NAME/iiwa-tools
 
+RUN git -C spartan submodule init
+RUN git -C spartan submodule update drake director signal-scope
 RUN yes "Y" | /home/$USER_NAME/spartan/setup/docker/install_dependencies.sh
-RUN yes "Y" | /home/$USER_NAME/spartan/setup/ubuntu/16.04/install_prereqs.sh
+RUN yes "Y" | /home/$USER_NAME/spartan/setup/ubuntu/16.04/install_prereqs_base.sh
 RUN yes "Y" | /home/$USER_NAME/spartan/drake/setup/ubuntu/16.04/install_prereqs.sh
-RUN yes "Y" | apt install ccache iptables
 
-# build elastic fusion
-#COPY ./setup/docker/install_elasticfusion.sh /tmp/install_elasticfusion.sh
-#RUN yes "Y" | /tmp/install_elasticfusion.sh
-#ENV ELASTIC_FUSION_EXECUTABLE=/home/$USER_NAME/ElasticFusion/install/bin/ElasticFusion
-
-# set the terminator inside the docker container to be a different color
-#RUN mkdir -p .config/terminator
-#COPY ./setup/docker/terminator_config .config/terminator/config
-#RUN chown $USER_NAME:$USER_NAME -R .config
+# Make recording video possible
+RUN apt install -y ffmpeg
 
 RUN chown $USER_ID:$USER_GID -R /home/$USER_NAME
 
