Specify anzu resource path

--- a/docker/nautilus_config.json
+++ b/docker/nautilus_config.json
@@ -9,5 +9,6 @@
     "procman_config": "rand_obj_picking.pmd",
     "iiwa_optitrack_id": "22",
     "target_optitrack_id": "21",
-    "camera_device": "/dev/video2"
+    "camera_device": "/dev/video0",
+    "anzu_resource_root": "/home/robot-lab/enabling-anzu"
 }
