--- a/docker/nautilus_config.json
+++ b/docker/nautilus_config.json
@@ -6,6 +6,7 @@
     "iiwa_port": "30201",
     "iiwa_local_interface": "enp82s0",
     "iiwa_local_ip": "192.170.11.200",
+    "iiwa_koni_ip": "192.170.11.2",
     "container": "iiwa_nautilus",
     "log_directory": "/media/logs/nautilus",
     "procman_config": "rand_obj_picking.pmd",
