--- a/docker/cuttlefish_config.json
+++ b/docker/cuttlefish_config.json
@@ -3,7 +3,11 @@
     "gripper_address": "192.168.1.23",
     "gripper_remote_port": "1800",
     "gripper_local_port": "1801",
+    "grasp_frame_translational_offset": "16.5",
     "iiwa_port": "30201",
+    "iiwa_local_interface": "ens5f1",
+    "iiwa_local_ip": "192.170.11.200",
+    "iiwa_koni_ip": "192.170.11.2",
     "container": "iiwa_cuttlefish",
     "log_directory": "/media/logs/cuttlefish",
     "procman_config": "lcm_pick_and_place.pmd",
