--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -5,7 +5,7 @@ ARG USER_PASSWORD
 ARG USER_ID
 ARG USER_GID
 
-RUN apt-get update
+RUN apt update
 RUN apt install sudo
 RUN useradd -ms /bin/bash $USER_NAME
 RUN usermod -aG sudo $USER_NAME
@@ -20,7 +20,6 @@ WORKDIR /home/$USER_NAME
 RUN echo $USER_PASSWORD | sudo -S bash -c 'echo "'$USER_NAME' ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/docker-user' && printf "\n"
 
 # Install some packages which are convenient for interactive shells
-RUN apt update
 RUN apt install -y iptables less vim ccache iproute2 tcpdump git iputils-ping ffmpeg
 
 COPY spartan /home/$USER_NAME/spartan
@@ -31,6 +30,9 @@ RUN git -C spartan submodule update drake director signal-scope
 RUN yes "Y" | /home/$USER_NAME/spartan/setup/docker/install_dependencies.sh
 RUN yes "Y" | /home/$USER_NAME/spartan/setup/ubuntu/16.04/install_prereqs_base.sh
 RUN yes "Y" | /home/$USER_NAME/spartan/drake/setup/ubuntu/16.04/install_prereqs.sh
+
+# Now that we have drake's apt sources, install lcm
+RUN apt install -y lcm
 
 RUN chown $USER_ID:$USER_GID -R /home/$USER_NAME
 
